# molecularGSM

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  GetGitRevisionDescription.cmake  GitSHA1_8h.html  GitSHA1_8h__dep__incl.map  GitSHA1_8h__dep__incl.md5  GitSHA1_8h_source.html  Makefile  PackagesList.cmake  ProjectName.cmake  README.md  TPLsList.cmake  Version.cmake  annotated.html  asdf  ase.cpp  ase.h  ase_8cpp.html  ase_8cpp__incl.map  ase_8cpp__incl.md5  ase_8h.html  ase_8h__dep__incl.map  ase_8h__dep__incl.md5  ase_8h__incl.md5  ase_8h_source.html  athena.pbs  bmat.cpp  bmat_8cpp.html  bmat_8cpp__incl.md5  classASE-members.html  classASE.html  classGAUSSIAN-members.html  classGAUSSIAN.html  classGString-members.html  classGString.html  classGString__coll__graph.map  classGString__coll__graph.md5  classGradient-members.html  classGradient.html  (+262 more)
GSM/: CMakeLists.txt  GitSHA1.cpp.in  ase.cpp  bmat.cpp  constants.h  gaussian.cpp  gaussian.h  grad.cpp  grad.h  gstring.cpp  gstring.h  icoord.cpp  icoord.h  knnr.cpp  knnr.h  main.cpp  mem.cpp  molpro.cpp  mopac.cpp  mopac.h  optic.cpp  orca.cpp  pTable.cpp  pTable.h  qchem.cpp  qchem.h  qchem.h.in  qchemsf.cpp  stringtools.cpp  stringtools.h  turbomole.cpp  turbomole.h  utils.cpp  utils.h  xtb.cpp  xtb.h
GSM/GSM/: gaussian.cpp  grad.h  gstring.cpp  molpro.cpp  molpro.h  orca.cpp  qchem.cpp  qchemsf.h
GSM/cmake/: Dependencies.cmake
GSM_src/: CMakeLists.txt  LST.cpp  LST.h  NOTES.txt  gstring.cpp  mopac.cpp  orca.h  print.cpp  savefile.cpp
TEST/: CMakeLists.txt  (+1 more)
TriBITS/test/ci_support/: CDashQueryAnalyzeReportUnitTestHelpers.py  CDashQueryAnalyzeReport_UnitTests.py  CDashSubprojectDependencies.gold.xml  CMakeCache.large.clean.txt.expected  CMakeCache.large.txt  CMakeCache.small.clean.txt.expected  CMakeCache.small.txt  CMakeLists.txt  CheckinTest_UnitTests.py  CreateIssueTrackerFromCDashQuery_UnitTests.py  ExtraReposList3NoContinuous.cmake  ExtraReposListEmptyList.cmake  ExtraReposListExisting1Missing1.cmake  ExtraReposListExisting_2.cmake  ExtraReposListExisting_3.cmake  ExtraReposListExisting_4.cmake  ExtraReposListHasPackagesAndDeepDir.cmake  ExtraReposListInvalidCategory.cmake  ExtraReposListInvalidType.cmake  ExtraReposListNotGit.cmake  ExtraReposList_1.cmake  FindCISupportDir.py  GetWithCmake.py  TribitsDependencies_UnitTests.py  TribitsExampleProject_ProjectCiFileChangeLogic_UnitTests.py  TribitsPackageFilePathUtils_UnitTests.py  TribitsPackageTestNameUtils_UnitTests.py  TribitsStripCommentsFromCMakeCacheFile_TestDriver.cmake  TrilinosPackageDependencies.extraRepoOnePackage.gold.xml  TrilinosPackageDependencies.preCopyrightTrilinos.extraTrilinosRepo.gold.xml  TrilinosPackageDependencies.preCopyrightTrilinos.gold.xml  TrilinosPackageDependencies.preRepoOnePackage.preCopyrightTrilinos.gold.xml  cdash_analyze_and_report_UnitTests.py  cdash_build_testing_date_UnitTests.py  cdash_index_query_data.flattened.json  cdash_index_query_data.json  cdash_query_tests_data.flattened.json  cdash_query_tests_data.json  clone_extra_repos_UnitTests.py  example_test_failure_github_issue.py
TriBITS/test/ci_support/CreateIssueTrackerFromCDashQuery/: test_data_tests_2_builds_2.json
TriBITS/test/ci_support/DumpXmlDepsTests/: CMakeLists.txt
TriBITS/test/ci_support/cdash_analyze_and_report/twip_2_twim_2/: expectedBuilds1.csv  expectedBuilds2.csv
TriBITS/test/ci_support/cdash_analyze_and_report/twoif_10_twoinr2_twif_8_twinr_1/: test_data.json
TriBITS/test/ci_support/cdash_analyze_and_report/twoif_12_twif_9/: README.txt  expectedBuilds.csv  fullCDashIndexBuilds.json  fullCDashNonpassingTests.json  testsWithIssueTrackers.csv
TriBITS/test/ci_support/cdash_analyze_and_report/twoif_12_twif_9/test_history/: 2018-10-28-cee-rhel6-Trilinos-atdm-cee-rhel6-clang-opt-serial-MueLu_UnitTestsBlockedEpetra_MPI_1-HIST-30.json  2018-10-28-cee-rhel6-Trilinos-atdm-cee-rhel6-clang-opt-serial-PanzerAdaptersIOSS_tIOSSConnManager2_MPI_2-HIST-30.json  2018-10-28-cee-rhel6-Trilinos-atdm-cee-rhel6-clang-opt-serial-PanzerAdaptersIOSS_tIOSSConnManager3_MPI_3-HIST-30.json  2018-10-28-cee-rhel6-Trilinos-atdm-cee-rhel6-clang-opt-serial-Teko_ModALPreconditioner_MPI_1-HIST-30.json  2018-10-28-cee-rhel6-Trilinos-atdm-cee-rhel6-gnu-4.9.3-opt-serial-PanzerAdaptersIOSS_tIOSSConnManager2_MPI_2-HIST-30.json  2018-10-28-cee-rhel6-Trilinos-atdm-cee-rhel6-gnu-4.9.3-opt-serial-PanzerAdaptersIOSS_tIOSSConnManager3_MPI_3-HIST-30.json  2018-10-28-cee-rhel6-Trilinos-atdm-cee-rhel6-intel-opt-serial-PanzerAdaptersIOSS_tIOSSConnManager2_MPI_2-HIST-30.json  2018-10-28-cee-rhel6-Trilinos-atdm-cee-rhel6-intel-opt-serial-PanzerAdaptersIOSS_tIOSSConnManager3_MPI_3-HIST-30.json  2018-10-28-mutrino-Trilinos-atdm-mutrino-intel-opt-openmp-KNL-Anasazi_Epetra_BKS_norestart_test_MPI_4-HIST-30.json  2018-10-28-mutrino-Trilinos-atdm-mutrino-intel-opt-openmp-KNL-Belos_gcrodr_hb_MPI_4-HIST-30.json  2018-10-28-mutrino-Trilinos-atdm-mutrino-intel-opt-openmp-KNL-Intrepid2_unit-test_Discretization_shorter-HIST-30.json  2018-10-28-mutrino-Trilinos-atdm-mutrino-intel-opt-openmp-KNL-KokkosKernels_blas_serial_MPI_1-HIST-30.json  (+10 more)
TriBITS/test/ci_support/test_data/: tribits-example-project-changed-files-1.txt  tribits-example-project-changed-files-2.txt  tribits-example-project-changed-files-3.txt  tribits-example-project-changed-files-4.txt
TriBITS/test/ctest_driver/: CMakeLists.txt  CTestDriverUnitTests.cmake  list_cdash_notes_files_in_xml_file.sh
TriBITS/test/ctest_driver/MockCTestDriver/: CMakeLists.txt  TrilinosPackageDependencies.Trilinos.xml  enableThyraEpetra.cmake  failedPackages.ALL_PACKAGES.txt  failedPackages.Teko.txt  unit_test_driver.cmake
TriBITS/test/ctest_driver/TribitsExampleMetaProject/: CMakeLists.txt
TriBITS/test/ctest_driver/TribitsExampleMetaProject/data/: TribitsExMetaProjRepoVersion.for-testing.txt  TribitsExMetaProj_version_date.for-testing.h  VersionDate.TribitsExMetaProj.cmake
TriBITS/test/ctest_driver/TribitsExampleProject/: CMakeLists.txt  replace_string_in_file.sh
TriBITS/test/ctest_driver/data/dummy_build_dir/Testing/: TAG
docs/: CMakeLists.txt  Doxyfile.in
(+515 files in other folders)
