TRIBITS_PACKAGE(gsm)

# setting different energy calculators that GSM will use
if(NOT DEFINED GSM_ENABLE_QCHEM)
	SET(GSM_ENABLE_QCHEM 0)
else()
    set(CALCULATOR "qchem" CACHE STRING "Calculator")
endif()

if(NOT DEFINED GSM_ENABLE_QCHEM_SF)
	SET(GSM_ENABLE_QCHEM_SF 0)
else()
    set(CALCULATOR "qchem_sf" CACHE STRING "Calculator")
endif()

if(NOT DEFINED GSM_ENABLE_MOLPRO)
	SET(GSM_ENABLE_MOLPRO 0)
else()
    set(CALCULATOR "molpro" CACHE STRING "Calculator")
endif()

if(NOT DEFINED GSM_ENABLE_ASE)
	SET(GSM_ENABLE_ASE 0)
else()
    set(CALCULATOR "ase" CACHE STRING "Calculator")
endif()

if(NOT DEFINED GSM_ENABLE_GAUSSIAN)
	SET(GSM_ENABLE_GAUSSIAN 0)
else()
    set(CALCULATOR "gaussian" CACHE STRING "Calculator")
endif()

if(NOT DEFINED GSM_ENABLE_ORCA)
	SET(GSM_ENABLE_ORCA 0)
else()
    set(CALCULATOR "orca" CACHE STRING "Calculator")
endif()

if(NOT DEFINED GSM_ENABLE_TURBOMOLE)
        SET(GSM_ENABLE_TURBOMOLE 0)
else()
    set(CALCULATOR "turbomole" CACHE STRING "Calculator")
endif()


if( NOT(GSM_ENABLE_QCHEM EQUAL 1 OR GSM_ENABLE_QCHEM_SF EQUAL 1 OR GSM_ENABLE_MOLPRO EQUAL 1 OR GSM_ENABLE_ASE EQUAL 1 OR  GSM_ENABLE_GAUSSIAN EQUAL 1 OR GSM_ENABLE_ORCA EQUAL 1 OR GSM_ENABLE_TURBOMOLE EQUAL 1))
		set(CALCULATOR "mopac" CACHE STRING "Calculator")
endif()


CONFIGURE_FILE(
	"${CMAKE_CURRENT_SOURCE_DIR}/qchem.h.in"
	"${CMAKE_CURRENT_BINARY_DIR}/qchem.h"
	)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/GitSHA1.cpp.in" "${CMAKE_CURRENT_BINARY_DIR}/GitSHA1.cpp")

# source files
file(GLOB GSM_SRC
	"qchem.h"
    "*.h"
    "*.cpp"
)

list(APPEND GSM_SRC "${CMAKE_CURRENT_BINARY_DIR}/GitSHA1.cpp" GitSHA1.h)

# set up libraries
set(MKL_FIND_DEBUG ON)
find_package(MKL REQUIRED)
include_directories(${MKL_INCLUDE_DIRS})
set(LIBS ${LIBS} ${MKL_LIBRARIES})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

MESSAGE("-- Calculator is ${CALCULATOR}")
# set target name
TRIBITS_ADD_EXECUTABLE(${TARGET_NAME}.${CALCULATOR} NOEXEPREFIX SOURCES ${GSM_SRC} IMPORTEDLIBS ${LIBS})
TRIBITS_PACKAGE_POSTPROCESS()
